tests/ui/msg_send_id_underspecified.stderr
error[E0282]: type annotations needed for `Option<Id<objc2::runtime::Object, O>>`
 --> ui/msg_send_id_underspecified.rs:9:33
  |
9 |     let _: &Object = &*unsafe { msg_send_id![obj, description].unwrap() };
  |                                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the macro `msg_send_id` (in Nightly builds, run with -Z macro-backtrace for more info)
help: consider giving `result` an explicit type, where the type for type parameter `O` is specified
 --> $WORKSPACE/objc2/src/macros.rs
  |
  |         let result: Option<Id<objc2::runtime::Object, O>>;
  |                   +++++++++++++++++++++++++++++++++++++++
